# features-across-time

./: .gitignore  README.md  batch_sizes.yaml  pyproject.toml
output/: js_divs_ngrams_model_pythia-1.4b_4096.csv  js_divs_ngrams_model_pythia-14m_4096.csv  js_divs_ngrams_model_pythia-160m_4096.csv  js_divs_ngrams_model_pythia-1b_4096.csv  js_divs_ngrams_model_pythia-2.8b_4096.csv  js_divs_ngrams_model_pythia-410m_4096.csv  js_divs_ngrams_model_pythia-6.9b_4096.csv  js_divs_ngrams_model_pythia-70m_4096.csv  mean_divergences.csv  mean_shuffled.csv  means_ngrams_model.csv  means_ngrams_model_pythia-1.4b.csv  means_ngrams_model_pythia-1.4b_1024.csv  means_ngrams_model_pythia-1.4b_1024_3.csv  means_ngrams_model_pythia-1.4b_1024_[3].csv  means_ngrams_model_pythia-1.4b_1024_kl_div.csv  means_ngrams_model_pythia-12b_1024.csv  means_ngrams_model_pythia-12b_1024_[1 2].csv  means_ngrams_model_pythia-12b_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed1_1024.csv  means_ngrams_model_pythia-14m-seed1_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed2_1024.csv  means_ngrams_model_pythia-14m-seed2_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed3_1024.csv  means_ngrams_model_pythia-14m-seed3_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed4_1024.csv  means_ngrams_model_pythia-14m-seed4_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed5_1024.csv  means_ngrams_model_pythia-14m-seed5_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed6_1024.csv  means_ngrams_model_pythia-14m-seed6_1024_kl_div.csv  means_ngrams_model_pythia-14m-seed7_1024.csv  means_ngrams_model_pythia-14m.csv  (+97 more)
(+118 files in other folders)
